[package]
name = "sim-ads-port"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.72"
eva-common = "0.3.2"
eva-sdk = "0.3.0"
jemallocator = "0.5.4"
log = "0.4.19"
once_cell = "1.18.0"
serde = { version = "1.0.183", features = ["derive", "rc"] }
tokio = { version = "1.30.0", features = ["full"] }
eva-ads-common = { path = "../eva-ads-common" }
binrw = "0.11.2"
parking_lot = "0.12.1"
