[package]
name = "sim-ads-service"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
eva-common = { version = "0.3.2", features = ["events", "common-payloads", "payload", "acl"] }
eva-sdk = { version = "0.3.0" }
async-trait = { version = "0.1.51" }
serde = { version = "1.0.133", features = ["derive", "rc"] }
log = "0.4.14"
jemallocator = { version = "0.5.0" }
once_cell = "1.13.1"
busrt = { version = "0.4.6", features = ["rpc", "ipc"] }
eva-ads-common = { path = "../eva-ads-common" }
binrw = "0.11.2"
parking_lot = "0.12.1"

[features]
std-alloc = []
