[package]
name = "eva-sim-modbus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
busrt = { version = "0.4.6", features = ["rpc"] }
eva-common = { version = "0.3.1", features = ["bus-rpc"] }
log = "0.4.19"
once_cell = "1.18.0"
rmodbus = "0.7.3"
uuid = "1.4.0"
