[package]
name = "eva-sim-modbus"
version = "0.1.0"
edition = "2021"
authors = ["Serhij S. <div@altertech.com>"]
license = "Apache-2.0"
repository = "https://github.com/eva-ics/sim"
description = "EVA ICS Virtual Fieldbus Simulator"
readme = "README.md"
keywords = ["modbus", "server", "hardware", "nostd"]

[dependencies]
busrt = { version = "0.4.6", features = ["rpc"] }
eva-common = { version = "0.3.2", features = ["bus-rpc"] }
log = "0.4.19"
once_cell = "1.18.0"
rmodbus = "0.7.3"
uuid = "1.4.0"
