[package]
name = "sim-modbus-port"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
eva-common = { version = "0.3.0", features = ["events", "common-payloads", "payload", "acl", "openssl-vendored"] }
eva-sdk = { version = "0.3.0" }
async-trait = { version = "0.1.51" }
serde = { version = "1.0.133", features = ["derive", "rc"] }
log = "0.4.14"
jemallocator = { version = "0.5.0" }
once_cell = "1.13.1"
busrt = { version = "0.4.6", features = ["rpc", "ipc"] }
rmodbus = "0.7.3"
uuid = { version = "1.4.0", features = ["v4"] }
hex = "0.4.3"
async-channel = "1.9.0"
parking_lot = "0.12.1"
bmart-derive = "0.1.3"
tokio-serial = "5.4.4"
crc16 = "0.4.0"

[features]
std-alloc = []
