[package]
name = "sim-modbus-sensor"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
eva-common = { version = "0.3.2", features = ["events", "common-payloads", "payload", "acl"] }
eva-sdk = { version = "0.3.0" }
async-trait = { version = "0.1.51" }
serde = { version = "1.0.133", features = ["derive", "rc"] }
log = "0.4.14"
jemallocator = { version = "0.5.0" }
once_cell = "1.13.1"
busrt = { version = "0.4.6", features = ["rpc", "ipc"] }
rmodbus = { version = "0.7.3", features = ["with_serde"] }
ieee754 = "0.2.6"
eva-sim-modbus = { path = "../eva-sim-modbus" }

[features]
std-alloc = []
